Style to header of landing page

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
 <body>
 
+    <div class="section1">
     <div class="header">
-        <img src="" alt="replacer image">
+        <img src="" alt="header logo">
         <ul>
             <li><a href="">header link one</a></li>
             <li><a href="">header link two</a></li>
@@ -18,16 +19,22 @@
         </ul>
     </div>
 
-    <div class="section1">
+    <div class="container1">
+    <div class="mini-container1">
     <div class="title">This Website is Awesome</div>
     <div class="para">This website has some subtext that goes under the main title. It's a smaller font and the color is a lower contrast</div>
     <button class="sign-up">Sign Up</button>
+    </div>
+    <div class="mini-container2">
     <img src="" alt="replacer image">
+    </div>  
+    </div>
     </div>
 
-    <div class="title2">Some Random Info</div>
+   
 
     <div class="section2">
+    <div class="title2">Some Random Info</div>
     <img src="" alt="replacer image">
     <div class="text">this is some subtext under an illustration or image</div>
 
