--- a/index.html
+++ b/index.html
@@ -10,25 +10,30 @@
 <body>
 
     <div class="section1">
-    <div class="header">
-        <img src="" alt="header logo">
-        <ul>
+
+        <div class="header">
+            <p class="logo">Header Logo</p>
+            <ul>
             <li><a href="">header link one</a></li>
             <li><a href="">header link two</a></li>
             <li><a href="">header link three</a></li>
-        </ul>
-    </div>
+            </ul>
+        </div>
 
-    <div class="container1">
-    <div class="mini-container1">
-    <div class="title">This Website is Awesome</div>
-    <div class="para">This website has some subtext that goes under the main title. It's a smaller font and the color is a lower contrast</div>
-    <button class="sign-up">Sign Up</button>
-    </div>
-    <div class="mini-container2">
-    <img src="" alt="replacer image">
-    </div>  
-    </div>
+        <div class="container1">
+
+            <div class="mini-container1">
+                <h1 class="header-title">This Website is Awesome</h1>
+                <p class="header-subtext">This website has some subtext that goes under the main title. It's a smaller font and the color is a lower contrast</p>
+                <button class="header-button">Sign Up</button>
+            </div>
+
+             <div class="mini-container2">
+                <img src="/images/ocean.png" alt="replacer image">
+            </div>  
+
+        </div>
+
     </div>
 
    
