--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container1">
 
             <div class="mini-container1">
-                <h1 class="header-title">This Website is Awesome</h1>
+                <h1 class="header-title">This is a Tester Website</h1>
                 <p class="header-subtext">This website has some subtext that goes under the main title. It's a smaller font and the color is a lower contrast</p>
                 <button class="header-button">Sign Up</button>
             </div>
