Finish information section <section2>

--- a/index.html
+++ b/index.html
@@ -36,21 +36,34 @@
 
     </div>
 
-   
-
     <div class="section2">
-    <div class="title2">Some Random Info</div>
-    <img src="" alt="replacer image">
-    <div class="text">this is some subtext under an illustration or image</div>
 
-    <img src="" alt="replacer image">
-    <div class="text">this is some subtext under an illustration or image</div>
+        <h2 class="picture-title">Some Random Info</h2>
 
-    <img src="" alt="replacer image">
-    <div class="text">this is some subtext under an illustration or image</div>
+        <div class="picture-container">
 
-    <img src="" alt="replacer image">
-    <div class="text">this is some subtext under an illustration or image</div>
+            <div class="pic1">
+                <img src="/images/cig.jpg" alt="replacer image">
+                <div class="picture-text">cigs not good</div>
+            </div>
+
+            <div class="pic2">
+                <img src="/images/cig.jpg" alt="replacer image">
+                <div class="picture-text">cigs not good</div>
+            </div>
+
+            <div class="pic3">
+                <img src="/images/cig.jpg" alt="replacer image">
+                <div class="picture-text">cigs not good</div>
+            </div>
+
+            <div class="pic4">
+                <img src="/images/cig.jpg" alt="replacer image">
+                <div class="picture-text">cigs not good</div>
+            </div>
+
+        </div>
+
     </div>
 
     <div class="section3">
