Finish qoute section <section3>

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
     </div>
 
     <div class="section3">
-    <div class="qoute">"Success in life is the result of good judgment. Good judgement is usually the result of experience. Experience is usually the result of bad judgment.”</div>
-    <div class="author">Amr Bawzeer</div>
+        <p class="qoute">"Success in life is the result of good judgment. Good judgement is usually the result of experience. Experience is usually the result of bad judgment.”</p>
+        <b class="author">-Amr Bawzeer</b>
     </div>
 
     <div class="modal">
