Finish cta <section4>

--- a/index.html
+++ b/index.html
@@ -71,10 +71,15 @@
         <b class="author">-Amr Bawzeer</b>
     </div>
 
-    <div class="modal">
-        <div class="modal-header">Call to action!</div>
-        <div class="modal-text">Click that button!</div>
-        <button class="sign-up">Sign Up</button>
+    <div class="section4">
+        <div class="cta">
+            <h3 class="cta-header">Call to action!</h3>
+            <p class="cta-text">Click that button! Click that button! Click that button! Click that button!</p>
+        </div>
+        <div class="cta-button-container">
+            <button class="cta-sign-up">Sign Up</button>
+        </div>
+
     </div>
 
     <div class="footer">
